php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68945 Unknown admin values segfault pools
Submitted: 2015-01-29 14:58 UTC Modified: -
From: danack@php.net Assigned:
Status: Closed Package: FPM related
PHP Version: master-Git-2015-01-29 (Git) OS: Centos 64bit
Private report: No CVE-ID: None
 [2015-01-29 14:58 UTC] danack@php.net
Description:
------------
Trying to set the value for an 'unknown' ini setting through the FPM config file for a pool causes the pool to segfault.  e.g. when APC isn't loaded the presence of this line: 

php_admin_value[apc.shm_size] = "64M"

in a pool config file loaded automatically from /etc/php-fpm.d/

As PHP-FPM doesn't handle pools crashing on startup particularly well, and doesn't give a visible error message, this can be seen more easily by setting `daemonize = no` in /etc/php-fpm.conf

This does not crash on PHP5.6

Test script:
---------------
N/A

Expected result:
----------------
Unrecognized ini settings have no effect. 

Actual result:
--------------
PHP-FPM fails to start properly, and spams the log file with useless information.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-01-30 03:02 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=88e13bda6af610a3d4acfdc2992d600002ebd287
Log: Fixed bug #68945 (Unknown admin values segfault pools)
 [2015-01-30 03:02 UTC] laruence@php.net
-Status: Open +Status: Closed
 [2016-07-20 11:39 UTC] davey@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=88e13bda6af610a3d4acfdc2992d600002ebd287
Log: Fixed bug #68945 (Unknown admin values segfault pools)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC