Fixed bug #68945 (Unknown admin values segfault pools)